# software-renderer

./: .gitignore  CMakeLists.txt  README.md  Vector2i.h  Vector3f.h  main.cpp
include/: mesh.h  renderer.h  shader.h  texture.h  window.h
lib/sdl2/win32/: SDL2.lib  SDL2main.lib
lib/sdl2/win64/: SDL2.lib  SDL2main.lib
src/: main.cpp  mesh.cpp  renderer.cpp  texture.cpp  window.cpp
